# simple-server-rs

./: Cargo.toml  docker-compose.yml  readme.md
src/: auth.rs  main.rs
