[package]
name = "simple-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
data-encoding = "2.4.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
rand = "0.8.5"
ring = "0.16.20"
serde = { version = "1.0.178", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"]}
